# goosepp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: goosepp.h
include/contentExtraction/: ContentExtractor.h
include/goosepp/: GooseExtractor.h  PublishDateExtractor.h  TitleExtractor.h  goosepp.h
include/goosepp/contentExtraction/: BoostChecker.h  ContentExtractor.h  NodeScorer.h
include/goosepp/stopwords/: StopwordCounter.h  englishStopwordSet.h  stopwords.h
include/goosepp/util/: LazyGumboParser.h  fileUtils.h  gooseUtil.h
include/stopwords/: StopwordCounter.h
include/tokenizer/: WhitespaceTokenizer.h
include/util/: LazyGumboParser.h  gooseUtil.h  gumboUtils.h
resources/additional_html/: jezebel1.txt
scripts/: benchmark_python_goose.py
src/: BoostChecker.cpp  BoostChecker.h  CMakeLists.txt  ContentExtractor.cpp  ContentExtractor.h  GooseExtractor.cpp  GooseExtractor.h  NodeScorer.cpp  NodeScorer.h  NodeTextCleaner.cpp  NodeTextCleaner.h  OpenGraphExtractor.cpp  OpenGraphExtractor.h  PublishDateExtractor.cpp  PublishDateExtractor.h  TextNodeCollector.cpp  TextNodeCollector.h  TitleExtractor.cpp  TitleExtractor.h  WhitespaceTokenizer.cpp  WhitespaceTokenizer.h  fileUtils.cpp  fileUtils.h  gooseFuncs.cpp  gooseFuncs.h  gooseUtil.cpp  gooseUtil.h  goosepp.cpp  goosepp.h  gumboUtils.cpp  gumboUtils.h  main.cpp  stopwordSet.cpp  stopwordSet.h  stopwords.cpp  stopwords.h
src/contentExtraction/: BoostChecker.cpp  BoostChecker.h  ContentExtractor.cpp  NodeScorer.cpp  NodeScorer.h  NodeTextCleaner.cpp  NodeTextCleaner.h  TextNodeCollector.cpp  TextNodeCollector.h
src/stopwords/: StopwordCounter.h  englishStopwordSet.cpp  stopwords.cpp  stopwords.h
src/test/: CMakeLists.txt
src/test/benchmark/: runner.cpp
src/test/functional/: testContentExtraction.cpp
src/test/memory/: runner.cpp
src/test/unit/: testHelpers.h  test_BoostChecker.cpp  test_NodeScorer.cpp  test_NodeTextCleaner.cpp  test_OpenGraphExtractor.cpp  test_PublishDateExtractor.cpp  test_TitleExtractor.cpp  test_WhitespaceTokenizer.cpp
src/tokenizer/: Tokenizer.h  WhitespaceTokenizer.cpp
src/util/: fileUtils.cpp  gooseUtil.cpp  gooseUtil.h  gumboUtils.cpp
